# GaussianFormer

./: .gitignore  eval.py  install_custom_ops.sh  pyproject.toml  train.py  vis.py  visualize.py
config/: nuscenes_bev_gs12800.py  nuscenes_gs12800.py  nuscenes_gs25600.py  nuscenes_gs6400.py
config/_base_/: surroundbev.py
dataset/: __init__.py  bev_label.py
gaussianformer/encoder/gaussian_encoder/: __init__.py
gaussianformer/encoder/gaussian_encoder/ops/: pyproject.toml
gaussianformer/head/localagg/: pyproject.toml
gaussianformer/head/localagg_prob/: pyproject.toml
gaussianformer/head/localagg_prob_fast/: pyproject.toml
model/head/: gaussian_head.py
model/lifter/: __init__.py
