[project]
name = "gaussianformer"
version = "0.1.0"
requires-python = ">=3.8,<3.11"
description = "GaussianFormer: 3D Occupancy Prediction with 3D Gaussian"

dependencies = [
    "torch==2.0.0",
    "torchvision==0.15.1",
    "torchaudio==2.0.1",
    "openmim",
    "mmcv==2.0.1",
    "mmdet==3.0.0",
    "mmsegmentation==1.0.0",
    "mmdet3d==1.1.1",
    "spconv-cu117",
    "timm",
    "matplotlib==3.7.2",
    "einops",
    "jaxtyping",
]

[project.optional-dependencies]
dev = [
    "pip",
    "ninja",
    "black",
    "jupyter",
    "nvitop",
]

viz = [
    "pyvirtualdisplay",
    "mayavi",
    "PyQt5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
bypass-selection = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
mmcv = [
  { url = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.0.0/mmcv-2.0.1-cp38-cp38-manylinux1_x86_64.whl", marker = "python_full_version == '3.8.*'" },
  { url = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.0.0/mmcv-2.0.1-cp39-cp39-manylinux1_x86_64.whl", marker = "python_full_version == '3.9.*'" },
  { url = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.0.0/mmcv-2.0.1-cp310-cp310-manylinux1_x86_64.whl", marker = "python_full_version == '3.10.*'" },
]
